[tool.poetry]
name = "pool-workers"
version = "0.0.4"
description = "pool-workers is a light weight package for dealing & managing pools, workers and queues."
authors = ["medram <mramouchy@gmail.com>"]
documentation = "https://github.com/medram/pool_workers"
repository = "https://github.com/medram/pool_workers"
homepage = "https://github.com/medram/pool_workers"
license = "MIT"
readme = "README.md"
keywords = ["threads", "pools", "threading", "queue", "pool-workers"]
classifiers = [
	"Programming Language :: Python :: 3.7",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
